v0.10.2/_sources/generated/statsmodels.tsa.statespace.structural.UnobservedComponents.rst.txt
statsmodels.tsa.statespace.structural.UnobservedComponents
==========================================================

.. currentmodule:: statsmodels.tsa.statespace.structural

.. autoclass:: UnobservedComponents

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         UnobservedComponents.filter
         UnobservedComponents.fit
         UnobservedComponents.from_formula
         UnobservedComponents.hessian
         UnobservedComponents.impulse_responses
         UnobservedComponents.information
         UnobservedComponents.initialize
         UnobservedComponents.initialize_approximate_diffuse
         UnobservedComponents.initialize_default
         UnobservedComponents.initialize_known
         UnobservedComponents.initialize_statespace
         UnobservedComponents.initialize_stationary
         UnobservedComponents.loglike
         UnobservedComponents.loglikeobs
         UnobservedComponents.observed_information_matrix
         UnobservedComponents.opg_information_matrix
         UnobservedComponents.predict
         UnobservedComponents.prepare_data
         UnobservedComponents.score
         UnobservedComponents.score_obs
         UnobservedComponents.set_conserve_memory
         UnobservedComponents.set_filter_method
         UnobservedComponents.set_inversion_method
         UnobservedComponents.set_smoother_output
         UnobservedComponents.set_stability_method
         UnobservedComponents.setup
         UnobservedComponents.simulate
         UnobservedComponents.simulation_smoother
         UnobservedComponents.smooth
         UnobservedComponents.transform_jacobian
         UnobservedComponents.transform_params
         UnobservedComponents.untransform_params
         UnobservedComponents.update



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         UnobservedComponents.endog_names
         UnobservedComponents.exog_names
         UnobservedComponents.initial_variance
         UnobservedComponents.initialization
         UnobservedComponents.loglikelihood_burn
         UnobservedComponents.param_names
         UnobservedComponents.start_params
         UnobservedComponents.tolerance

