v0.14.1/_sources/generated/statsmodels.tsa.statespace.structural.UnobservedComponents.rst.txt
statsmodels.tsa.statespace.structural.UnobservedComponents
==========================================================

.. currentmodule:: statsmodels.tsa.statespace.structural

.. autoclass:: UnobservedComponents
   :exclude-members: clone,filter,fit,fit_constrained,fix_params,from_formula,handle_params,hessian,impulse_responses,information,initialize,initialize_approximate_diffuse,initialize_default,initialize_known,initialize_statespace,initialize_stationary,loglike,loglikeobs,observed_information_matrix,opg_information_matrix,predict,prepare_data,score,score_obs,set_conserve_memory,set_filter_method,set_inversion_method,set_smoother_output,set_stability_method,setup,simulate,simulation_smoother,smooth,transform_jacobian,transform_params,untransform_params,update,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~UnobservedComponents.clone
      ~UnobservedComponents.filter
      ~UnobservedComponents.fit
      ~UnobservedComponents.fit_constrained
      ~UnobservedComponents.fix_params
      ~UnobservedComponents.from_formula
      ~UnobservedComponents.handle_params
      ~UnobservedComponents.hessian
      ~UnobservedComponents.impulse_responses
      ~UnobservedComponents.information
      ~UnobservedComponents.initialize
      ~UnobservedComponents.initialize_approximate_diffuse
      ~UnobservedComponents.initialize_default
      ~UnobservedComponents.initialize_known
      ~UnobservedComponents.initialize_statespace
      ~UnobservedComponents.initialize_stationary
      ~UnobservedComponents.loglike
      ~UnobservedComponents.loglikeobs
      ~UnobservedComponents.observed_information_matrix
      ~UnobservedComponents.opg_information_matrix
      ~UnobservedComponents.predict
      ~UnobservedComponents.prepare_data
      ~UnobservedComponents.score
      ~UnobservedComponents.score_obs
      ~UnobservedComponents.set_conserve_memory
      ~UnobservedComponents.set_filter_method
      ~UnobservedComponents.set_inversion_method
      ~UnobservedComponents.set_smoother_output
      ~UnobservedComponents.set_stability_method
      ~UnobservedComponents.setup
      ~UnobservedComponents.simulate
      ~UnobservedComponents.simulation_smoother
      ~UnobservedComponents.smooth
      ~UnobservedComponents.transform_jacobian
      ~UnobservedComponents.transform_params
      ~UnobservedComponents.untransform_params
      ~UnobservedComponents.update
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~UnobservedComponents.endog_names
      ~UnobservedComponents.exog_names
      ~UnobservedComponents.initial_variance
      ~UnobservedComponents.initialization
      ~UnobservedComponents.loglikelihood_burn
      ~UnobservedComponents.param_names
      ~UnobservedComponents.start_params
      ~UnobservedComponents.state_names
      ~UnobservedComponents.tolerance
   
   
   